--- a/style.css
+++ b/style.css
@@ -30,15 +30,14 @@
     font-style: normal;
 }
 
-
-
 :root {
     --clr-navigation-text: rgba(17, 17, 17, 1);
     --clr-navigation-underline: rgba(233, 233, 233, 1);
-    --font-s-small: 1rem;
-    --font-s-medium: 1.5rem;
-    --font-s-large: 2rem;
-    --font-s-x-large: 2.6rem;
+    --clr-navigation-underline-active: rgba(233, 233, 233, 0.5);
+    --font-s-small: 1vmin;
+    --font-s-medium: 1.5vmin;
+    --font-s-large: 2vmin;
+    --font-s-x-large: 2.6vmin
 }
 
 body {
@@ -47,8 +46,15 @@ body {
     margin: 0 auto;
 }
 
+
+@media (min-width: 30rem) {
+    body {
+        width: 400px;
+    }
+}
+
 img {
-    max-width: 100%;
+    width: 100%;
 }
 
 ul {
@@ -68,7 +74,15 @@ nav a {
     text-decoration: none;
     line-height: 2;
     color:var(--clr-navigation-text);
+
     border-bottom: 0.2rem solid var(--clr-navigation-underline);
+    transition: 0.2s ease-in-out;
+}
+
+nav a:hover {
+    
+    border-bottom: 0.2rem solid var(--clr-navigation-underline-active);
+    transition: 0.2s ease-in-out;
 }
 
 h1 {
