--- a/style.css
+++ b/style.css
@@ -54,21 +54,17 @@ h3 {
     margin-bottom: 0;
 }
 
-@media (min-width: calc(5vw * 1rem)) {
+/* 640px breakpoint */
+@media (min-width: calc(40*16 * 1rem)) {
 
     header[role=banner] {
         display: grid;
         grid-template-columns: 1fr 2fr minmax(300px, 1fr);
         grid-auto-rows: 1fr;
     }
-}
 
-
-.portfolio__grid--item {
-    background: linear-gradient(to bottom, #1e5799 0%,#2989d8 50%,#207cca 51%,#7db9e8 100%);
-}
-
-footer.footer__sub {
-    columns: 3 300px;
-    column-gap: 2rem;
+    footer.footer__sub {
+        columns: 3 300px;
+        column-gap: 2rem;
+    }
 }
