--- a/style.css
+++ b/style.css
@@ -34,23 +34,22 @@
     --clr-navigation-text: rgba(17, 17, 17, 1);
     --clr-navigation-underline: rgba(233, 233, 233, 1);
     --clr-navigation-underline-active: rgba(233, 233, 233, 0.5);
-    --font-s-small: 1vmin;
-    --font-s-medium: 1.5vmin;
-    --font-s-large: 2vmin;
-    --font-s-x-large: 2.6vmin
+    --font-size: 100%; /* 16px */
+    --ratio: 1.333;
+
+    --h4: calc(var(--font-size) * var(--ratio));
+    --h3: calc(var(--h4) * var(--ratio));
+    --h2: calc(var(--h3) * var(--ratio));
+    --h1: calc(var(--h2) * var(--ratio));
+
+    --media-small: calc(40*16 * 1rem);
+    --media-massive: calc(400*16 *1rem);
 }
 
 body {
-    font: 16px/1.5 'Varela Round', sans-serif;
+    font: var(--font-size) 'Varela Round', sans-serif;
     width: calc(100vw - 10rem);
     margin: 0 auto;
-}
-
-
-@media (min-width: 30rem) {
-    body {
-        width: 400px;
-    }
 }
 
 img {
@@ -63,7 +62,7 @@ ul {
 }
 
 p {
-    font-size: 1rem;
+    font-size: var(--font-size);
 }
 
 a {
@@ -79,6 +78,15 @@ nav a {
     transition: 0.2s ease-in-out;
 }
 
+nav li {
+    display: inline;
+    margin-right: 1rem;
+}
+
+nav li:last-child {
+    margin-right: 0;
+}
+
 nav a:hover {
     
     border-bottom: 0.2rem solid var(--clr-navigation-underline-active);
@@ -86,33 +94,44 @@ nav a:hover {
 }
 
 h1 {
-    font-size: var(--font-s-x-large);
+    font-size: var(--h1);
     line-height: 1.4;
     font-weight: 700;
     letter-spacing: 0.01rem;
 }
 
 h2 {
-    font-size: var(--font-s-large);
+    font-size: var(--h2);
     margin-top: 0;
 }
 
 h3 {
-    font-size: var(--font-s-medium);
+    font-size: var(--h3);
     margin-bottom: 0;
 }
 
+h4 {
+    font-size: var(--h4);
+    margin-bottom: 0;
+}
+
+header[role=banner] {
+    display: grid;
+    grid-template-columns: 1fr 2fr minmax(300px, 1fr);
+    grid-template-rows: 1fr;
+}
+
 /* 640px breakpoint */
-@media (min-width: calc(40*16 * 1rem)) {
+@media (min-width: var(--media-massive)) {
 
-    header[role=banner] {
-        display: grid;
-        grid-template-columns: 1fr 2fr minmax(300px, 1fr);
-        grid-auto-rows: 1fr;
-    }
-
+    
+    
     footer.footer__sub {
-        columns: 3 300px;
-        column-gap: 2rem;
+        display: grid;
+        grid-template-columns: repeat(3, minmax(200px, 1fr) );
+        grid-gap: 1rem;
+       
     }
 }
+
+
