--- a/style.css
+++ b/style.css
@@ -37,10 +37,11 @@
     --font-size: 100%; /* 16px */
     --ratio: 1.333;
 
-    --h4: calc(var(--font-size) * var(--ratio));
-    --h3: calc(var(--h4) * var(--ratio));
-    --h2: calc(var(--h3) * var(--ratio));
-    --h1: calc(var(--h2) * var(--ratio));
+    --h5: var(--font-size);
+    --h4: calc(var(--font-size)*var(--ratio));
+    --h3: calc(var(--h4)*var(--ratio));
+    --h2: calc(var(--h3)*var(--ratio));
+    --h1: calc(var(--h2)*var(--ratio));
 
     --media-small: calc(40*16 * 1rem);
     --media-massive: calc(400*16 *1rem);
@@ -59,6 +60,7 @@ img {
 ul {
     list-style: none;
     padding-left: 0;
+    margin: 0;
 }
 
 p {
@@ -69,10 +71,26 @@ a {
     text-decoration: none;
 }
 
+header[role=banner] {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-auto-rows: 1fr;
+    padding: 5vh 0;
+
+}
+
+[role="navigation"] {
+    justify-self: end;
+}
 nav a {
+    align-self: end;
+
+
+    color:var(--clr-navigation-text);
+
     text-decoration: none;
     line-height: 2;
-    color:var(--clr-navigation-text);
+    
 
     border-bottom: 0.2rem solid var(--clr-navigation-underline);
     transition: 0.2s ease-in-out;
@@ -107,19 +125,31 @@ h2 {
 
 h3 {
     font-size: var(--h3);
-    margin-bottom: 0;
+    margin: 0;
 }
 
 h4 {
     font-size: var(--h4);
     margin-bottom: 0;
 }
-
-header[role=banner] {
-    display: grid;
-    grid-template-columns: 1fr 2fr minmax(300px, 1fr);
-    grid-template-rows: 1fr;
+h5 {
+    font-size: var(--h5);
+    margin: 0;
 }
+
+/* Portfolio Grid Homepage */
+
+.portfolio_grid {
+    display: grid;
+    grid-template-columns: repeat(3, minmax(300px, 1fr));
+    grid-gap: 2rem;
+}
+
+
+
+
+
+
 
 /* 640px breakpoint */
 @media (min-width: var(--media-massive)) {
