--- a/style.css
+++ b/style.css
@@ -59,7 +59,7 @@ p {
 }
 
 img {
-    width: 100%;
+    max-width: 100%;
 }
 
 ul {
@@ -78,7 +78,7 @@ a {
 
 header[role=banner] {
     display: grid;
-    grid-template-columns: repeat(2, 1fr);
+    grid-template-columns: repeat(auto-fit, 1fr);
     grid-auto-rows: 1fr;
     padding: 5vh 0;
 
@@ -146,27 +146,6 @@ h5 {
 
 .portfolio_grid {
     display: grid;
-    grid-template-columns: repeat(3, minmax(300px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
     grid-gap: 2rem;
 }
-
-
-
-
-
-
-
-/* 640px breakpoint */
-@media (min-width: var(--media-massive)) {
-
-    
-    
-    footer.footer__sub {
-        display: grid;
-        grid-template-columns: repeat(3, minmax(200px, 1fr) );
-        grid-gap: 1rem;
-       
-    }
-}
-
-
